# safecausal

./: .gitignore  K_SWEEP_USAGE.md  MCC_COMPUTATION_FIX.md  PAIRWISE_MULTICLASS_USAGE.md  README.md  cosplot.py  generate_semi_synth_embeddings.sh  pyproject.toml  questions.txt  script.txt  sparse_dict.py  store_embeddings.py  utils.py
baselines/: pca.py  saes.py  train_saes.py
data/: ana.py  base.py  categorical.py  eval_gradeschooler.py  generate_causal.py  generate_ipd_trajectories.py  generator.py  gradeschooler.py  harm.json  malicious_train_categories.jsonl  metric_values.py  models.py  plot_udr.py  prompts.py  safe.json  synthdata.py  temp.md  test_script.py  toy_translator.py  travellers.py  utils.py  vaw_triplets.json
datasets/: ana.py
loaders/: __init__.py  modelloader.py  testdataloader.py
psp/: data_utils.py  evaluate.py  lin_baseline.py  linear_sae.py  metrics.py  plot.py  sparse_dict.py  store_embeddings.py  temp_test.py  temp_test_2.py  test_pca.py  utils.py
scripts/: analyze_metrics.py  check_wd.py  cosplot.py  evaluate.py  evaluate_accuracy.py  evaluate_bias_in_bios.py  evaluate_cosinesim.py  evaluate_dag_bios.py  evaluate_generation.py  evaluate_generation_bios.py  evaluate_generation_ls.py  evaluate_generation_rs.py  evaluate_identifiability.py  evaluate_labeled_sentences.py  evaluate_ls_probe.py  evaluate_mcc.py  evaluate_ood.py  evaluate_oodprobe.py  generate_categorical_embeddings.py  job.sh  job_binary_1.sh  job_binary_2.sh  job_embeddings.sh  job_synth2.sh  job_synth3.sh  job_truthful.sh  probe_data.py  ssae_steer.py  steer_sae.py  test.py  (+6 more)
(+85 files in other folders)
